# sortari

./: CMakeLists.txt  README.md  gen.cpp  info.txt  main.cpp  run.sh
.github/workflows/: checker.yml  clang.yml  pr_check.yml
small_tests/: 0-sortare.in  0-sortare.ok  1-sortare.in  1-sortare.ok  2-sortare.in  2-sortare.ok  3-sortare.in  3-sortare.ok  4-sortare.in  4-sortare.ok  5-sortare.in  5-sortare.ok  6-sortare.in  6-sortare.ok  7-sortare.in  7-sortare.ok  8-sortare.in  8-sortare.ok
sorts/: CMakeLists.txt  counting_sort.cpp  heapsort.cpp  merge.cpp  mergesort.cpp  parallel_sort.cpp  radixsort.cpp  shellsort.cpp  sortari.h  stl_sort.cpp  timsort.cpp
